<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.HomeFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        android:backgroundTint="@color/teal_200"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:text="@string/are_you_bored" />

            <ImageView
                android:id="@+id/ibMore"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_gravity="top|end"
                android:layout_margin="5dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/image"
                android:scaleType="fitXY"
                android:src="@drawable/ic_bored" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold"
                android:text="@string/find_something_interesting_to_do_right_now"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>